Refactor the getLength() method to return the actual length field, replace raw thread usage with Thread.startVirtualThread() for sleeping operations, and remove the obsolete noframes selector from the CSS to ensure modern standards compliance. (#1349)